# rusty-cnc-gui

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
.github/workflows/: build_and_deploy.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  jog_message.proto  main.rs  usb.rs  usb_comm.rs  webserver.rs  websocket.rs  websocket_server.rs
src/components/: ConfigurationView.svelte  MainPage.svelte  PositionView.svelte  RepeatButton.svelte  SidebarRight.svelte  Toolpath.svelte  UploadGCodeButton.svelte
src/lib/: Communication.svelte  Toolpath.svelte  socketStore.js
src/protobuf/: jog_message.proto
src/routes/: +layout.svelte  +page.svelte
